// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps creates actions 1`] = `
Object {
  "addModeratorMaker": [Function],
  "clearModeratorSuggestions": [Function],
  "fetchModeratorSuggestionsMaker": [Function],
  "fetchModeratorsMaker": [Function],
  "removeModeratorMaker": [Function],
  "showMember": [Function],
}
`;

exports[`mapDispatchToProps creates actions 2`] = `
Array [
  Array [
    Object {
      "graphql": Object {
        "query": "mutation ($personId: ID, $communityId: ID) {
        addModerator(personId: $personId, communityId: $communityId) {
          id
          moderators (first: 100) {
            items {
              id
              name
              avatarUrl
            }
          }
        }
      }",
        "variables": Object {
          "communityId": 33,
          "personId": 22,
        },
      },
      "meta": Object {
        "communityId": 33,
        "optimistic": true,
        "personId": 22,
      },
      "type": "ModeratorSettings/ADD_MODERATOR",
    },
  ],
  Array [
    Object {
      "graphql": Object {
        "query": "mutation ($personId: ID, $communityId: ID, $isRemoveFromCommunity: Boolean) {
        removeModerator(personId: $personId, communityId: $communityId, isRemoveFromCommunity: $isRemoveFromCommunity) {
          id
          moderators (first: 100) {
            items {
              id
              name
              avatarUrl
            }
          }
        }
      }",
        "variables": Object {
          "communityId": 33,
          "isRemoveFromCommunity": true,
          "personId": 22,
        },
      },
      "meta": Object {
        "communityId": 33,
        "isRemoveFromCommunity": true,
        "optimistic": true,
        "personId": 22,
      },
      "type": "ModeratorSettings/REMOVE_MODERATOR",
    },
  ],
  Array [
    Object {
      "graphql": Object {
        "query": "query ($id: ID, $autocomplete: String) {
        community (id: $id) {
          id
          members (first: 10, autocomplete: $autocomplete) {
            hasMore
            items {
              id
              name
              avatarUrl
            }
          }
        }
      }",
        "variables": Object {
          "autocomplete": "autocomplete",
          "id": 33,
        },
      },
      "meta": Object {
        "extractModel": "Community",
      },
      "type": "ModeratorSettings/FETCH_MODERATOR_SUGGESTIONS",
    },
  ],
  Array [
    Object {
      "type": "ModeratorSettings/CLEAR_MODERATOR_SUGGESTIONS",
    },
  ],
]
`;

exports[`mapDispatchToProps creates actions 3`] = `
Array [
  Array [
    Object {
      "key": "MemberProfile",
      "params": Object {
        "id": 22,
      },
      "routeName": "MemberProfile",
    },
  ],
]
`;

exports[`mapStateToProps works 1`] = `
Object {
  "community": SessionBoundModel {
    "_fields": Object {
      "id": "99",
      "slug": "foo",
    },
    "slug": "foo",
  },
  "currentUser": SessionBoundModel {
    "_fields": Object {
      "id": "1",
    },
    "id": "1",
  },
  "moderatorSuggestions": Array [],
  "moderators": Array [
    SessionBoundModel {
      "_fields": Object {
        "id": "1",
      },
    },
    SessionBoundModel {
      "_fields": Object {
        "id": "2",
      },
    },
  ],
}
`;

exports[`mergeProps merges the props 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($personId: ID, $communityId: ID) {
        addModerator(personId: $personId, communityId: $communityId) {
          id
          moderators (first: 100) {
            items {
              id
              name
              avatarUrl
            }
          }
        }
      }",
    "variables": Object {
      "communityId": "99",
      "personId": 10,
    },
  },
  "meta": Object {
    "communityId": "99",
    "optimistic": true,
    "personId": 10,
  },
  "type": "ModeratorSettings/ADD_MODERATOR",
}
`;

exports[`mergeProps merges the props 2`] = `
Object {
  "graphql": Object {
    "query": "mutation ($personId: ID, $communityId: ID, $isRemoveFromCommunity: Boolean) {
        removeModerator(personId: $personId, communityId: $communityId, isRemoveFromCommunity: $isRemoveFromCommunity) {
          id
          moderators (first: 100) {
            items {
              id
              name
              avatarUrl
            }
          }
        }
      }",
    "variables": Object {
      "communityId": "99",
      "isRemoveFromCommunity": true,
      "personId": 10,
    },
  },
  "meta": Object {
    "communityId": "99",
    "isRemoveFromCommunity": true,
    "optimistic": true,
    "personId": 10,
  },
  "type": "ModeratorSettings/REMOVE_MODERATOR",
}
`;

exports[`mergeProps merges the props 3`] = `
Object {
  "graphql": Object {
    "query": "query ($id: ID, $autocomplete: String) {
        community (id: $id) {
          id
          members (first: 10, autocomplete: $autocomplete) {
            hasMore
            items {
              id
              name
              avatarUrl
            }
          }
        }
      }",
    "variables": Object {
      "autocomplete": "autocomplete",
      "id": "99",
    },
  },
  "meta": Object {
    "extractModel": "Community",
  },
  "type": "ModeratorSettings/FETCH_MODERATOR_SUGGESTIONS",
}
`;

exports[`mergeProps merges the props 4`] = `
Object {
  "graphql": Object {
    "query": "query ($slug: String) {
        community (slug: $slug) {
          id
          name
          slug
          moderators (first: 100) {
            hasMore
            items {
              id
              name
              avatarUrl
            }
          }
        }
      }",
    "variables": Object {
      "slug": "foo",
    },
  },
  "meta": Object {
    "extractModel": "Community",
  },
  "type": "ModeratorSettings/FETCH_MODERATORS",
}
`;

exports[`mergeProps merges the props 5`] = `
Object {
  "addModerator": [Function],
  "addModeratorMaker": [Function],
  "clearModeratorSuggestions": [Function],
  "community": SessionBoundModel {
    "_fields": Object {
      "id": "99",
      "slug": "foo",
    },
    "slug": "foo",
  },
  "currentUser": SessionBoundModel {
    "_fields": Object {
      "id": "1",
    },
    "id": "1",
  },
  "fetchModeratorSuggestions": [Function],
  "fetchModeratorSuggestionsMaker": [Function],
  "fetchModerators": [Function],
  "fetchModeratorsMaker": [Function],
  "moderatorSuggestions": Array [],
  "moderators": Array [
    SessionBoundModel {
      "_fields": Object {
        "id": "1",
      },
    },
    SessionBoundModel {
      "_fields": Object {
        "id": "2",
      },
    },
  ],
  "removeModerator": [Function],
  "removeModeratorMaker": [Function],
  "showMember": [Function],
}
`;
